Move bib file back to root text directory

--- a/3-text/Makefile
+++ b/3-text/Makefile
@@ -142,7 +142,7 @@ text:
 
 refs:
 	# Sync bib file from Paperpile
-	wget -P resources/ --content-disposition -N https://paperpile.com/eb/TzUbpFbxIs
+	wget --content-disposition -N https://paperpile.com/eb/TzUbpFbxIs
 
 share:
 	# Updates shared manuscript folder
